added file uploading and static files serving

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.freemarker.expose-request-attributes=true
+
+upload.path=/f:/JAVA/sweater/src/main/resources/files
