added user email activation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.freemarker.expose-request-attributes=true
 
 upload.path=/f:/JAVA/sweater/src/main/resources/files
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=aldoracer@yandex.ru
+spring.mail.password=zxcvg789
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=true
