--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
-#spring.datasource.url=jdbc:postgresql://localhost/sweater
-#spring.datasource.username=postgres
-#spring.datasource.password=123
-#spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:postgresql://localhost/sweater
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
 
-spring.h2.console.enabled=true
-#server.port=8084
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:sweater
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=a
+#spring.datasource.password=a
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+##server.port=8084
+##spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:h2:mem:sweater
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.freemarker.expose-request-attributes=true
 
