Added Spring Session, Captcha, rememberMe

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,7 @@ spring.mail.password=zxcvg789
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
+
+recaptcha.secret=6Ld6BmQdAAAAALtJZgotlx6qqXWOk-oMOeNph8jF
+spring.session.jdbc.initialize-schema=always
+spring.session.jdbc.table-name=SPRING_SESSION
