--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,10 +26,10 @@ spring.mail.username=aldoracer@yandex.ru
 spring.mail.password=zxcvg789
 spring.mail.port=465
 spring.mail.protocol=smtps
-mail.debug=false
+mail.debug=true
 
 recaptcha.secret=6Ld6BmQdAAAAALtJZgotlx6qqXWOk-oMOeNph8jF
 spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.table-name=SPRING_SESSION
 
-hostname=192.168.1.1
+hostname=localhost:8080
